--- a/MidTest0229/src/main/webapp/css/style.css
+++ b/MidTest0229/src/main/webapp/css/style.css
@@ -91,7 +91,53 @@ header .inner #gnb li ul li a{
 	font: bold 13px "arial";
 }
 
+/* Main Styles */
+.loginMain {
+    text-align: center;
+    padding: 50px 0;
+    background-color: #f2f2f2; /* 배경색을 원하는 색으로 지정 */
+}
 
+.loginDiv {
+    max-width: 400px;
+    margin: 0 auto;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.loginDiv h1 {
+    text-align: center;
+    color: #333;
+    font-size: 24px;
+}
+
+.loginDiv form {
+    display: flex;
+    flex-direction: column;
+}
+
+.loginDiv input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    font-size : 16px;
+}
+
+.loginDiv input[type="submit"] {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.loginDiv input[type="submit"]:hover {
+    background-color: #45a049;
+}
 
 figure {
 	width: 100%;
@@ -251,3 +297,5 @@ footer .inner .lower p {
 	font: 12px/1 "arial";
 	color: #777;
 }
+
+
