--- a/Day43_240305_Spring/.settings/org.eclipse.wst.common.component
+++ b/Day43_240305_Spring/.settings/org.eclipse.wst.common.component
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="Day43_240305_Maven2-0.0.1-SNAPSHOT">
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                
-        <property name="context-root" value="Day43_240305_Maven2"/>
-                
-        <property name="java-output-path" value="/Day43_240305_Maven2/build/classes"/>
             
-    </wb-module>
     
+    <wb-module deploy-name="Day43_240305_Maven2-0.0.1-SNAPSHOT">
+                
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                        
+        
+        <property name="java-output-path" value="/Day43_240305_Maven2/build/classes"/>
+        <property name="context-root" value="Day43_240305_Spring"/>
+                    
+    
+    </wb-module>
+        
+
 </project-modules>
